// Copyright 2020 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

package feedwire;

option optimize_for = LITE_RUNTIME;

message DisplayInfo {
  optional float screen_density = 1;
  optional uint32 screen_width_in_pixels = 2;
  optional uint32 screen_height_in_pixels = 3;
}
